[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface_text.tres" type="DynamicFont" id=1]
[ext_resource path="res://Inventory/main_inventory/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface_control.gd" type="Script" id=3]
[ext_resource path="res://Cards.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface_button.gd" type="Script" id=5]
[ext_resource path="res://Sugestao_de_menu_de_equipados.png" type="Texture" id=6]

[node name="interface_control" type="Control"]
pause_mode = 2
margin_left = -28.0
margin_top = -97.0
margin_right = 12.0
margin_bottom = -57.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.470588, 0.223529, 0.458824, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 8.02481, 4.51539 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sugestao_de_menu_de_equipados" type="Sprite" parent="."]
position = Vector2( 160.702, 90.7206 )
scale = Vector2( 0.785604, 0.445217 )
texture = ExtResource( 6 )

[node name="buttons" type="Control" parent="."]
margin_left = 126.663
margin_top = -2.75457
margin_right = 166.663
margin_bottom = 37.2454
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment_button" type="Button" parent="buttons"]
margin_left = -160.508
margin_top = 4.3928
margin_right = -14.5075
margin_bottom = 31.3928
rect_scale = Vector2( 0.483954, 0.680372 )
rect_pivot_offset = Vector2( 72.3454, 25.6761 )
custom_fonts/font = ExtResource( 1 )
text = "EQUIPMENT"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="configurations_button" type="Button" parent="buttons"]
margin_left = -168.189
margin_top = 27.2671
margin_right = 28.8109
margin_bottom = 54.2672
rect_scale = Vector2( 0.371888, 0.680372 )
rect_pivot_offset = Vector2( 72.3454, 25.6761 )
custom_fonts/font = ExtResource( 1 )
text = "CONFIGURATIONS"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="Button" parent="buttons"]
margin_left = -162.579
margin_top = 48.131
margin_right = -16.5792
margin_bottom = 75.131
rect_scale = Vector2( 0.443956, 0.680372 )
rect_pivot_offset = Vector2( 72.3454, 25.6761 )
custom_fonts/font = ExtResource( 1 )
text = "EXIT"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 2 )]
position = Vector2( 230.19, 27.8309 )
scale = Vector2( 0.792492, 0.897283 )

[node name="Cards" parent="." instance=ExtResource( 4 )]
margin_left = 34.1474
margin_top = 125.898
margin_right = 111.148
margin_bottom = 161.898
rect_scale = Vector2( 5.84186, 1.27712 )

[node name="configurations" type="Control" parent="."]
visible = false
margin_left = 2.52269
margin_top = 38.6812
margin_right = 42.5227
margin_bottom = 78.6812
rect_scale = Vector2( 7.8, 3.28 )
[connection signal="pressed" from="buttons/equipment_button" to="." method="_on_equipment_button_pressed"]
[connection signal="pressed" from="buttons/configurations_button" to="." method="_on_configurations_button_pressed"]
[connection signal="pressed" from="buttons/exit_button" to="." method="_on_exit_button_pressed"]
